# learnClaude-code

./: .gitignore  README.md  pyproject.toml
artifacts/eval/: BASELINE.md
docs/: OWNER_REVIEW.md
examples/demo_repo_template/: README.md
examples/demo_repo_template/demo_app/: __init__.py  string_tools.py
examples/demo_repo_template/tests/: test_string_tools.py
examples/eval_repo_templates/clamp_lower_bound/: README.md
examples/eval_repo_templates/clamp_lower_bound/demo_app/: number_tools.py
examples/eval_repo_templates/clamp_lower_bound/tests/: test_number_tools.py
examples/eval_repo_templates/compact_whitespace/: README.md
examples/eval_repo_templates/failing_test_points_to_source/: README.md
examples/eval_repo_templates/implementation_only_change/: README.md
examples/eval_repo_templates/multi_file_context_single_edit/: README.md
examples/eval_repo_templates/slug_join/: README.md
repo_task_runtime/: __init__.py  agent.py  api.py  approval.py  context_bundle.py  demo_repo.py  diffing.py  eval_cases.py  eval_metrics.py  eval_pack.py  eval_runner.py  eval_types.py  git_repo.py  model_client.py  models.py  session.py  workbench.py
repo_task_runtime/web/: app.js  index.html  styles.css
scripts/: run_demo_smoke.py  run_eval.py  run_real_repo_pilot.py  setup_demo_repo.py
tests/: test_agent.py  test_api.py  test_context_bundle.py  test_demo_flow.py  test_demo_smoke_script.py  test_eval_pack.py  test_model_client.py  test_real_repo_pilot_script.py  test_run_eval_cli.py  test_runtime.py  test_web_console.py
(+11 files in other folders)
